--- a/pipelime/submitToFarm.ui
+++ b/pipelime/submitToFarm.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>905</width>
+    <width>966</width>
     <height>787</height>
    </rect>
   </property>
@@ -471,7 +471,7 @@ background-image: url(/icon/io_ANIMOUT.png);
        </widget>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,0,0,0,0,0,0,0,0">
+       <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,0,0,0,0,0,0,0,0,0">
         <property name="spacing">
          <number>6</number>
         </property>
@@ -529,7 +529,7 @@ background-image: url(/icon/io_ANIMOUT.png);
            </size>
           </property>
           <property name="text">
-           <string>Job Type</string>
+           <string>Job Type                   </string>
           </property>
          </widget>
         </item>
@@ -597,7 +597,7 @@ background-image: url(/icon/io_ANIMOUT.png);
          <widget class="QLabel" name="label">
           <property name="minimumSize">
            <size>
-            <width>100</width>
+            <width>80</width>
             <height>0</height>
            </size>
           </property>
@@ -625,15 +625,22 @@ background-image: url(/icon/io_ANIMOUT.png);
           </property>
           <property name="maximumSize">
            <size>
-            <width>60</width>
+            <width>80</width>
             <height>16777215</height>
            </size>
           </property>
           <property name="text">
-           <string>Packet Size</string>
+           <string>Packet Size       </string>
           </property>
           <property name="alignment">
            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_16">
+          <property name="text">
+           <string>Dir  </string>
           </property>
          </widget>
         </item>
@@ -902,6 +909,22 @@ background-image: url(/icon/io_ANIMOUT.png);
           </property>
          </widget>
         </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_10"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_dir">
+          <property name="maximumSize">
+           <size>
+            <width>30</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item>
@@ -938,7 +961,7 @@ background-image: url(/icon/io_ANIMOUT.png);
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>883</width>
+           <width>944</width>
            <height>240</height>
           </rect>
          </property>
@@ -1294,7 +1317,7 @@ background-image: url(/icon/io_ANIMOUT.png);
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>905</width>
+     <width>966</width>
      <height>21</height>
     </rect>
    </property>
