Added icon resources

--- a/pipelime/submitToFarm.ui
+++ b/pipelime/submitToFarm.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>966</width>
-    <height>787</height>
+    <width>947</width>
+    <height>750</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -923,6 +923,14 @@ background-image: url(/icon/io_ANIMOUT.png);
           <property name="text">
            <string/>
           </property>
+          <property name="icon">
+           <iconset>
+            <normalon>:/buttons/folder.svg</normalon>
+           </iconset>
+          </property>
+          <property name="flat">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
        </layout>
@@ -961,7 +969,7 @@ background-image: url(/icon/io_ANIMOUT.png);
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>944</width>
+           <width>925</width>
            <height>240</height>
           </rect>
          </property>
@@ -1317,7 +1325,7 @@ background-image: url(/icon/io_ANIMOUT.png);
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>966</width>
+     <width>947</width>
      <height>21</height>
     </rect>
    </property>
@@ -1330,7 +1338,7 @@ background-image: url(/icon/io_ANIMOUT.png);
   </action>
  </widget>
  <resources>
-  <include location="icons.qrc"/>
+  <include location="../icons/submitToFarm.qrc"/>
  </resources>
  <connections>
   <connection>
